--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/pg": "^8.16.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "next": "^15.1.0",
     "pg": "^8.16.3",
