--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
-    "next": "^15.1.0",
+    "next": "^16.1.0",
     "pg": "^8.16.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.4.0",
